# the-associate

./: .assoc.toml  .assoc.toml.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.ps1  build.sh  install.ps1  install.sh  plan.md  wt-fragment.json
.cargo/: config.toml
.github/workflows/: auto-version.yml  ci.yml  release.yml
docs/: docs.html  index.html
src/: app.rs  config.rs  event.rs  main.rs  pane_send.rs
src/data/: cli_detect.rs  filebrowser.rs  git.rs  github.rs  inboxes.rs  jira.rs  linear.rs  mod.rs  path_encoding.rs  plans.rs  process_runner.rs  prompt_builder.rs  sessions.rs  subagents.rs  tasks.rs  teams.rs  todos.rs  transcripts.rs
src/model/: agent_status.rs  filebrowser.rs  git.rs  github.rs  inbox.rs  jira.rs  linear.rs  mod.rs  plan.rs  process.rs  session.rs  task.rs  team.rs  todo.rs  transcript.rs
src/ui/: filebrowser_view.rs  git_view.rs  github_view.rs  help_overlay.rs  issues_view.rs  jira_view.rs  layout.rs  linear_view.rs  mod.rs  plans_view.rs  processes_view.rs  prompt_modal.rs  sessions_view.rs  tabs.rs  teams_view.rs  terminals_view.rs  theme.rs  todos_view.rs  util.rs
src/watcher/: mod.rs
web/: index.html  svg-assets.html
