[package]
name = "assoc"
version = "0.1.0"
edition = "2021"
description = "The Associate - Claude Code TUI Dashboard"
license = "MIT"

[[bin]]
name = "assoc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
tui-textarea = "0.7"
toml = "0.8"

[profile.release]
strip = true
lto = true
opt-level = "z"
